<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/toolbarsearch"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="com.google.android.material.search.SearchView"
        >
    </item>

    <item
        android:id="@+id/toolbarfavorites"
        android:title="@string/favoritos"
        android:icon="@drawable/baseline_favorite_24"
        app:showAsAction="always"
        >

    </item>

    <item
        android:id="@+id/toolbarsettings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        >

    </item>

</menu>