<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/menuback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/md_theme_primaryFixed_mediumContrast"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:icon="@drawable/baseline_arrow_back_24"
                app:tint="@color/md_theme_background_mediumContrast"
                />


        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@+id/menuback">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/author"
            app:layout_constraintTop_toBottomOf="@+id/inputtitle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputEditorialt"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/editorial"
            app:layout_constraintTop_toBottomOf="@+id/inputauthor"
            tools:layout_editor_absoluteX="16dp">

            <AutoCompleteTextView
                android:id="@+id/Editorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/InputFechas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/InputEditorialt">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="333dp">

                <EditText
                    android:id="@+id/Datestart"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_margin="16dp"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/datestart"
                    android:inputType="date"
                    tools:layout_editor_absoluteX="46dp"
                    tools:layout_editor_absoluteY="343dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Datefinal"
                    android:layout_width="175dp"
                    android:layout_height="45dp"
                    android:layout_margin="16dp"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/datefinal"
                    android:inputType="date"
                    tools:layout_editor_absoluteX="224dp"
                    tools:layout_editor_absoluteY="339dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/addbook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBaradd"
            app:layout_constraintVertical_bias="0.16">

        </com.google.android.material.button.MaterialButton>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editopinion"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/InputFechas"
            android:hint="Opinion"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/InputCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/editopinion"
            >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipromnace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/romance"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipthriller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thriller"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipterror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terror"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipfantasia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fantasia"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipnovela"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novela"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipaventura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aventura"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chippolitia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politica"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chippoesia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poesia"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipmisterio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misterio"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipcienciafic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cienciaficcion"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipautobio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autobio"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBaradd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputCategorias" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
